* fix words break on post

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1533,6 +1533,7 @@ a.comments__add {
 
 
 .single-post {
+  word-break: break-all;
   padding-bottom: 20px;
   margin-bottom: 30px;
 
